implements keep in card decks

--- a/src/main/js/app/app.component.html
+++ b/src/main/js/app/app.component.html
@@ -1,10 +1,8 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div class="container">
-  <div class="keeps">
-    <div class="row">
-      <div *ngFor="let keep of keeps">
-        <app-keep [keep]="keep"></app-keep>
-      </div>
-    </div>
+  <div class="card-deck">
+    <div *ngFor="let keep of keeps" class="card">
+      <app-keep [keep]="keep"></app-keep>
+    </div>  
   </div>
 </div>
